[gd_scene load_steps=6 format=3 uid="uid://dtym1raeanels"]

[ext_resource type="Script" uid="uid://kincuw20raf7" path="res://Views/character_selection.gd" id="1_tylnv"]
[ext_resource type="Texture2D" uid="uid://5e34ha2xl1gu" path="res://Assets/Textures/metal_01_1k/metal_01_1k/metal_01_normal_gl_1k.png" id="1_w8kuo"]
[ext_resource type="PackedScene" uid="uid://dhxxghmgoelbj" path="res://Entities/UI Elements/selection_character.tscn" id="3_x7ol4"]

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_3vtvp"]
albedo_color = Color(0.051971, 0.051971, 0.051971, 1)
roughness = 0.01
normal_texture = ExtResource("1_w8kuo")
uv1_triplanar = true

[sub_resource type="Environment" id="Environment_tylnv"]
background_mode = 2
glow_enabled = true
fog_light_energy = 0.0

[node name="CharacterSelection" type="Node3D"]
script = ExtResource("1_tylnv")
character = ExtResource("3_x7ol4")

[node name="CSGBox3D2" type="CSGBox3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -0.5, 0)
size = Vector3(10000, 1, 10000)
material = SubResource("StandardMaterial3D_3vtvp")

[node name="SpotLight3D4" type="SpotLight3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 0.866025, 0.5, 0, -0.5, 0.866025, 0, 3.5, 6)
visible = false
light_energy = 3.14
spot_range = 947.489

[node name="SpotLight3D3" type="SpotLight3D" parent="."]
transform = Transform3D(0.965926, -0.0669873, 0.25, -0.0669873, 0.868308, 0.491481, -0.25, -0.491481, 0.834234, 3, 3.5, 6)
light_energy = 3.14
spot_range = 947.489

[node name="SpotLight3D2" type="SpotLight3D" parent="."]
transform = Transform3D(0.965926, 0.0669873, -0.25, 0.0669873, 0.868308, 0.491481, 0.25, -0.491481, 0.834234, -3, 3.5, 6)
visible = false
light_energy = 3.14
spot_range = 947.489

[node name="Camera3D" type="Camera3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, -5.96046e-08, 0, 5.96046e-08, 1, 0, 1, 3)
size = 3.0

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="HUD" type="Control" parent="CanvasLayer"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="Label" type="Label" parent="CanvasLayer/HUD"]
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -97.0
offset_top = -98.0
offset_right = 97.0
offset_bottom = -75.0
grow_horizontal = 2
grow_vertical = 0
text = "Press A Button To Join!"

[node name="WorldEnvironment" type="WorldEnvironment" parent="."]
environment = SubResource("Environment_tylnv")

[node name="DirectionalLight3D" type="DirectionalLight3D" parent="."]
transform = Transform3D(-0.866025, 0, -0.5, 0, 1, 0, 0.5, 0, -0.866025, 0, 0, 0)
light_color = Color(0.89, 0.915667, 1, 1)
light_energy = 0.2

[node name="Spot1" type="Node3D" parent="."]

[node name="Spot2" type="Node3D" parent="."]
transform = Transform3D(0.965926, 0, 0.258819, 0, 1, 0, -0.258819, 0, 0.965926, -2, 0, 0)

[node name="Spot3" type="Node3D" parent="."]
transform = Transform3D(0.965926, 0, -0.258819, 0, 1, 0, 0.258819, 0, 0.965926, 2, 0, 0.5)

[node name="Spot4" type="Node3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 2, 0, -2)

[node name="Spot5" type="Node3D" parent="."]
transform = Transform3D(0.866025, 0, 0.5, 0, 1, 0, -0.5, 0, 0.866025, -2, 0, -2)

[node name="Spot6" type="Node3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0.5, 0, -1.5)

[node name="Spot7" type="Node3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -0.5, 0, -1.5)

[node name="ReflectionProbe" type="ReflectionProbe" parent="."]
update_mode = 1
size = Vector3(200, 20, 200)
